--- a/app/views/ahw/current/building-route.html
+++ b/app/views/ahw/current/building-route.html
@@ -49,7 +49,7 @@ Calf weight
 
                 {
                   value: "igloo",
-                  text: "Permanent igloos or hutches grouped together",
+                  text: "Igloos/hutches adjacent to a permanent open-sided structure",
                   checked: checked("buildingroute", "igloo")
                 },
 
