--- a/app/views/ahw/current/country.html
+++ b/app/views/ahw/current/country.html
@@ -32,7 +32,7 @@
 
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div id="changed-name-hint" class="govuk-hint">
-      The location of the cattle housing
+                The location of the calf housing
     </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="country" name="country" type="radio" value="yes" data-aria-controls="conditional-country-postcode" {{ checked("country", "yes") }}>
