--- a/app/views/ahw/current/draught-fail.html
+++ b/app/views/ahw/current/draught-fail.html
@@ -30,7 +30,7 @@
       </p>
 
       {{ govukInsetText({
-        text: "For permanent igloos or hutches grouped together, this may mean adding solid sides to the outside pens."
+        text: "For igloos/hutches adjacent to a permanent open-sided structure, this may mean adding solid sides to the outside pens."
       }) }}
 
 
