--- a/app/views/ahw/current/draught.html
+++ b/app/views/ahw/current/draught.html
@@ -62,7 +62,7 @@ Straw bedding
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">All projects must have external calf-height solid walls/barriers to keep out drafts.<br><br>
-            For permanent igloos or hutches grouped together, this may mean adding solid sides to the outside pens.
+            For igloos/hutches adjacent to a permanent open-sided structure, this may mean adding solid sides to the outside pens.
           </p>
             </div>
    </div>
