--- a/app/views/ahw/current/additional-items-fail.html
+++ b/app/views/ahw/current/additional-items-fail.html
@@ -30,7 +30,7 @@
         <ul class="govuk-list govuk-list--bullet">
           <li>a minimum and maximum thermometer</li>
           <li>a humidity sensor</li>
-          <li>at least 2 IP66 sockets in housing areas</li>
+          <li>at least 2 IP66 sockets in the building</li>
           <li>access to a water supply</li>
           </ul>
 
