--- a/app/views/ahw/current/additional-items.html
+++ b/app/views/ahw/current/additional-items.html
@@ -36,7 +36,7 @@ Straw bedding
                   hint: {
                     html: "The building must have:<br><br><li>a minimum and maximum thermometer</li>
                     <li>a humidity sensor</li>
-                    <li>at least 2 IP66 sockets in housing areas</li>
+                    <li>at least 2 IP66 sockets in the building</li>
                     <li>access to a water supply</li>"
 
                   },
@@ -71,7 +71,7 @@ Straw bedding
             <ul class="govuk-list govuk-list--bullet">
               <li>a minimum and maximum thermometer</li>
               <li>a humidity sensor</li>
-              <li>at least 2 IP66 sockets in housing areas</li>
+              <li>at least 2 IP66 sockets in the building</li>
               <li>access to a water supply</li>
               </ul>
 
