--- a/app/views/water/r2v2/remaining-costs-fail.html
+++ b/app/views/water/r2v2/remaining-costs-fail.html
@@ -13,7 +13,7 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
-  <a class="govuk-back-link" href="change-summerabs">Back</a>
+  <a class="govuk-back-link" href="remaining-costs">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -24,14 +24,15 @@
       <h1 class="govuk-heading-l">
         You cannot apply for a grant from this scheme
       </h1>
-      <p>Your project cannot increase water use from summer abstraction or mains.</p>
+      <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
       {{ govukInsetText({
-        html: '<p>RPA wants to fund projects that use more sustainable water sources, such as:</p>
+        html: '<p>You can use:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>winter peak-flow abstraction</li>
-          <li>rain water harvesting</li>
-          <li>bore hole/aquifer</li>
+          <li>loans</li>
+          <li>overdrafts</li>
+          <li>the Basic Payment Scheme</li>
+          <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
         </ul>
       '
       }) }}
