--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -48,12 +48,17 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>Round 2: version 2 (current)</a></strong><br>
+                              <a href='water/current/guidance' class="govuk-link--no-visited-state"><strong>Round 2: version 3 (current)</a></strong><br>
                               This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-856' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 20 January 2023<br/>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 30 January 2023<br/>
                                 </span></p>
 
                                 <p class='govuk-heading-m'>Previous versions</p>
+
+                                <p class='govuk-list app-list--definition'>
+                                  <a href='/water/r2v2/guidance' class="govuk-link--no-visited-state">Round 2: version 2</a><br>
+                                        This version was tested with users in Round 2 user research<br>
+                                        <span class="govuk-body govuk-!-font-size-14"># Last updated on 20 January 2023<br/>
 
                                 <p class='govuk-list app-list--definition'>
                                   <a href='/water/v8public/guidance' class="govuk-link--no-visited-state">Round 1: version 8 (public beta)</a><br>
