--- a/app/views/water/r2v2/current-irrigating.html
+++ b/app/views/water/r2v2/current-irrigating.html
@@ -13,14 +13,14 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
-  <a class="govuk-back-link" href="abstraction-licence">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="change-summerabs" method="post">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -50,7 +50,7 @@
           Continue
         </button>
 
-
+        
       </form>
     </div>
   </div>
