--- a/app/views/water/r2v2/irrigation-system.html
+++ b/app/views/water/r2v2/irrigation-system.html
@@ -45,7 +45,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-target", "Boom irrigator") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
-                    Boom
+                    Boom irrigator
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
@@ -100,7 +100,7 @@
       <aside class="app-related-items">
         <h3 class="govuk-heading-s"> Funding  priorities</h3>
         <div class="govuk-body govuk-!-font-size-19">
-          RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones. <br><br>For example, moving from rain gun to trickle.
+            RPA wants to fund projects that move from less efficient irrigation systems to more efficient ones.<br><br>For example, moving from rain gun to trickle.
         </div>
       </aside>
     </div>
