--- a/app/views/water/r2v2/remaining-costs.html
+++ b/app/views/water/r2v2/remaining-costs.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Changing the summer abstraction and mains
+Meeting the remaining project costs
 {% endblock %}
 
 {% block beforeContent %}
@@ -22,31 +22,25 @@ Changing the summer abstraction and mains
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
-
+        {% set remainingCosts = data['project-cost'] * 0.6 %}
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              {% if data['current-irrigating'] == 'Yes' %}
-               <h1 class="govuk-fieldset__heading">
-                 Are you going to increase the use of water from summer abstraction or mains?
-               </h1>
-               {% else %}
-             <h1 class="govuk-fieldset__heading">
-               Are you going to use water from summer abstraction or mains?
-             </h1>
-             {% endif %}
+              <h1 class="govuk-fieldset__heading">
+                Can you pay the remaining costs{%if remainingCosts %} of £{{ remainingCosts | toFixed(0) | commafy }}{% endif%}?
+              </h1>
             </legend>
             <br>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="change-summerabs" name="change-summerabs" type="radio" value="yes" {{ checked("change-summerabs", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="change-summerabs">
+                <input class="govuk-radios__input" id="remaining-costs" name="remaining-costs" type="radio" value="yes" {{ checked("remaining-costs", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="remaining-costs">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="change-summerabs-2" name="change-summerabs" type="radio" value="no" {{ checked("change-summerabs", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="change-summerabs-2">
+                <input class="govuk-radios__input" id="remaining-costs-2" name="remaining-costs" type="radio" value="no" {{ checked("remaining-costs", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="remaining-costs-2">
                   No
                 </label>
               </div>
@@ -63,13 +57,13 @@ Changing the summer abstraction and mains
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Your project cannot increase water use from summer abstraction or mains.</p>
-          <p>RPA wants to fund projects that use more sustainable water sources, such as:</p>
+          <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
+          <p>You can use:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>winter peak-flow abstraction</li>
-            <li>rain water harvesting</li>
-            <li>bore hole/aquifer</li>
-
+            <li>loans</li>
+            <li>overdrafts</li>
+            <li>the Basic Payment Scheme</li>
+            <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
 
           </ul>
       </div>
