GRANTS-1640, GRANTS-1641, GRANTS-1642

--- a/app/views/water/current/unsustainable-watersource.html
+++ b/app/views/water/current/unsustainable-watersource.html
@@ -89,9 +89,9 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <aside class="app-related-items">
-          <h3 class="govuk-heading-s"> Eligibility </h3>
+          <h3 class="govuk-heading-s"> Funding priorities </h3>
           <div class="govuk-body">
-            <p>Your project cannot increase water use from summer abstraction or mains.</p>
+
             <p>RPA wants to fund projects that use more sustainable water sources, such as:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>winter peak-flow abstraction</li>
