--- a/app/views/water/current/water-source-2.html
+++ b/app/views/water/current/water-source-2.html
@@ -36,13 +36,13 @@
 
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="water-source-2-current-4" name="water-source-2-current" type="checkbox" value="summer abs current" {{ checked("water-source-2-current", "summer abs current") }}>
+                <input class="govuk-checkboxes__input" id="water-source-2-current-4" name="water-source-2-current" type="checkbox" value="Summer abstraction" {{ checked("water-source-2-current", "Summer abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="water-source-2-current-4">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="water-source-2-current-5" name="water-source-2-current" type="checkbox" value="mains current" {{ checked("water-source-2-current", "mains current") }}>
+                <input class="govuk-checkboxes__input" id="water-source-2-current-5" name="water-source-2-current" type="checkbox" value="Mains" {{ checked("water-source-2-current", "Mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="water-source-2-current-5">
                   Mains
                 </label>
@@ -54,7 +54,7 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="water-source-2-current-3" name="water-source-2-current" type="checkbox" value="Rain water" {{ checked("water-source-2-current", "Rain water") }}>
+                <input class="govuk-checkboxes__input" id="water-source-2-current-3" name="water-source-2-current" type="checkbox" value="Rain water harvesting" {{ checked("water-source-2-current", "Rain water harvesting") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="water-source-2-current-3">
                   Rain water harvesting
                 </label>
@@ -84,13 +84,13 @@
               Select all that apply</div>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="water-source-2-target-4" name="water-source-2-target" type="checkbox" value="summer abs target" {{ checked("water-source-2-target", "summer abs target") }}>
+                  <input class="govuk-checkboxes__input" id="water-source-2-target-4" name="water-source-2-target" type="checkbox" value="Summer abstraction" {{ checked("water-source-2-target", "Summer abstraction") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="water-source-2-target-4">
                     Summer water surface abstraction
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="water-source-2-target-5" name="water-source-2-target" type="checkbox" value="mains target" {{ checked("water-source-2-target", "mains target") }}>
+                  <input class="govuk-checkboxes__input" id="water-source-2-target-5" name="water-source-2-target" type="checkbox" value="Mains" {{ checked("water-source-2-target", "Mains") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="water-source-2-target-5">
                     Mains
                   </label>
