--- a/app/views/water/current/water-source.html
+++ b/app/views/water/current/water-source.html
@@ -33,7 +33,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
           <div class="govuk-body">
-            <span class="govuk-hint">Select up to 2 options</span>
+            <span class="govuk-hint">Select all that apply</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
