--- a/app/views/water/current/water-source-2-error.html
+++ b/app/views/water/current/water-source-2-error.html
@@ -46,13 +46,13 @@
 
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="water-source-2-current-4" name="water-source-2-current" type="checkbox" value="summer abs current" {{ checked("water-source-2-current", "summer abs current") }}>
+                <input class="govuk-checkboxes__input" id="water-source-2-current-4" name="water-source-2-current" type="checkbox" value="Summer abstraction" {{ checked("water-source-2-current", "Summer abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="water-source-2-current-4">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="water-source-2-current-5" name="water-source-2-current" type="checkbox" value="mains current" {{ checked("water-source-2-current", "mains current") }}>
+                <input class="govuk-checkboxes__input" id="water-source-2-current-5" name="water-source-2-current" type="checkbox" value="Mains" {{ checked("water-source-2-current", "Mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="water-source-2-current-5">
                   Mains
                 </label>
@@ -98,13 +98,13 @@
                   </p>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="water-source-2-target-4" name="water-source-2-target" type="checkbox" value="summer abs target" {{ checked("water-source-2-target", "summer abs target") }}>
+                  <input class="govuk-checkboxes__input" id="water-source-2-target-4" name="water-source-2-target" type="checkbox" value="Summer abstraction" {{ checked("water-source-2-target", "Summer abstraction") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="water-source-2-target-4">
                     Summer water surface abstraction
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="water-source-2-target-5" name="water-source-2-target" type="checkbox" value="mains target" {{ checked("water-source-2-target", "mains target") }}>
+                  <input class="govuk-checkboxes__input" id="water-source-2-target-5" name="water-source-2-target" type="checkbox" value="Mains" {{ checked("water-source-2-target", "Mains") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="water-source-2-target-5">
                     Mains
                   </label>
