--- a/app/views/water/current/irrigation-system.html
+++ b/app/views/water/current/irrigation-system.html
@@ -43,7 +43,7 @@
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom irrigator" {{ checked("irrigation-systems-target", "Boom irrigator") }}>
+                  <input class="govuk-checkboxes__input" id="irrigation-systems-target-2" name="irrigation-systems-target" type="checkbox" value="Boom" {{ checked("irrigation-systems-target", "Boom") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-target-2">
                     Boom
                   </label>
