GRANTS-145, GRANTS-146, GRANTS-147

--- a/app/views/water/current/change-summerabs.html
+++ b/app/views/water/current/change-summerabs.html
@@ -28,11 +28,11 @@ Changing the summer abstraction and mains
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               {% if data['current-irrigating'] == 'Yes' %}
                <h1 class="govuk-fieldset__heading">
-                 Are you going to increase the use of water from summer abstraction or mains?
+                 Will you increase your use of summer abstraction or mains?
                </h1>
                {% else %}
              <h1 class="govuk-fieldset__heading">
-               Are you going to use water from summer abstraction or mains?
+               Will you use water from summer abstraction or mains?
              </h1>
              {% endif %}
             </legend>
