--- a/app/views/water/current/abstraction-licence.html
+++ b/app/views/water/current/abstraction-licence.html
@@ -43,7 +43,7 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="expected by 21 October 2021" {{ checked("abstraction-licence", "expected by 21 October 2021") }}>
+                <input class="govuk-radios__input" id="abstraction-licence-3" name="abstraction-licence" type="radio" value="should" {{ checked("abstraction-licence", "should") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence-3">
                   Should be in place by 31 January 2024
                 </label>
